crates/iota/src/client_ptb/snapshots/iota__client_ptb__lexer__tests__slash_comments_two_commands_after.snap
---
source: crates/iota/src/client_ptb/lexer.rs
assertion_line: 612
expression: lex(tokens)
---
[
    Spanned {
        span: Span {
            start: 33,
            end: 41,
        },
        value: Lexeme(
            Command,
            "assign",
        ),
    },
    Spanned {
        span: Span {
            start: 42,
            end: 48,
        },
        value: Lexeme(
            Ident,
            "result",
        ),
    },
    Spanned {
        span: Span {
            start: 49,
            end: 58,
        },
        value: Lexeme(
            Command,
            "dry-run",
        ),
    },
    Spanned {
        span: Span {
            start: 58,
            end: 58,
        },
        value: Lexeme(
            Eof,
            "",
        ),
    },
]
